fjord-compiler/test/errors/too-many-parameters/TooManyParameters4.fj
module test.errors.TooManyParameters4

record Zero
  zero : Int

implicit
zeroInstance : Zero
zeroInstance = 
  Zero 0

myFun : Zero => Int
myFun ev x =
  0
